<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_shop"
        />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_baseline_border_all_24"
        android:title="@string/title_category"
        />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_cart"
        />

    <item
        android:id="@+id/nav_noti"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/title_noti"
        />

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_user"
        />



</menu>