<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/imgSPCart"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/contentImg7"
            android:scaleType="centerCrop"
            android:src="@drawable/test" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTenSPCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/expnamepro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorpro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:background="@color/dark_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sizepro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtSizeCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/expsize"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtGiaCart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtGiaKMCart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnTru"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn_cart"
                android:backgroundTint="@null"
                android:focusable="false"
                android:text="@string/btndivide"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnValue"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:backgroundTint="@null"
                android:focusable="false"
                android:text="@string/number"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnCong"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn_cart"
                android:backgroundTint="@null"
                android:focusable="false"
                android:text="@string/btnplus"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>